# who-is-next

./: README.md  pyproject.toml
win/: __main__.py  config.py  db.py  models.py
win/handlers/: __init__.py  activity_creation.py  common.py
win/utils/: random_activity_name.py
